--- a/index.html
+++ b/index.html
@@ -113,15 +113,15 @@
 		Buy Now for $21.00
 	</a>
 	<ul class="socials">
-		<li><a href="#" class="socials__tw">Twitter</a></li>
-		<li><a href="#" class="socials__fb">Facebook</a></li>
-		<li><a href="#" class="socials__pi">Pinterest</a></li>
-		<li><a href="#" class="socials__in">Instagram</a></li>
+		<li><a href="#" class="socials__twitter">Twitter</a></li>
+		<li><a href="#" class="socials__facebook">Facebook</a></li>
+		<li><a href="#" class="socials__pinterest">Pinterest</a></li>
+		<li><a href="#" class="socials__instagram">Instagram</a></li>
 	</ul>
 	<div class="footer__copy">© 2014 Digital Abstracts</div>
 </div>
 <!-- end footer -->
 
-<div class="scrolltotop"></div>
+<div class="scrolltotop"><i></i></div>
 </body>
 </html>
