--- a/tabs/interviews.html
+++ b/tabs/interviews.html
@@ -5,7 +5,7 @@
 		<div class="interview__list-item">
 			<i class="ico-hearts"></i>
 			<ul class="interview__actors">
-				<li><span>2</span><a href="#">Tang Yau Hoong</a></li>
+				<li><span>2</span><a class="ajax load-page" href="/interviews/interview_tobias_van_schneider" data-page="/interviews/interview_tobias_van_schneider.html">Tang Yau Hoong</a></li>
 				<li><span>3</span><a href="#">Peter Tarka</a></li>
 				<li><span>4</span><a href="#">Mattias Adolfsson</a></li>
 				<li><span>5</span><a href="#">YemaYema</a></li>
