--- a/tabs/partners.html
+++ b/tabs/partners.html
@@ -2,7 +2,7 @@
 <div class="partners">
 	<div class="title">Our partner</div>
 	<div class="partners__important">
-		<a class="partners__stickerapp" href="#"></a>
+		<a href="#"><img src="img/stickerapp.png" alt=""></a>
 	</div>
 	<div class="title">Press about Playing Arts</div>
 	<ul class="partners__list">
